[metadata]
name = pasee
version = attr: pasee.__version__
description = HTTP server managing users.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@python.org
url = https://github.com/meltygroup/pasee
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: System Administrators
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9


[options]
python_requires = >= 3.6
packages = find:
install_requires =
  aioauth-client
  aiohttp
  aiohttp-cors
  asyncpg
  jinja2
  pyjwt[crypto]>=2.0.0
  pytoml
  shortuuid

[options.entry_points]
console_scripts = pasee=pasee.__main__:main

[options.extras_require]
sentry =
  sentry-sdk>=0.19
  aiocontextvars
